Update Belief State Model.ipynb

--- a/Belief State Model.ipynb
+++ b/Belief State Model.ipynb
@@ -1621,7 +1621,7 @@
    "source": [
     "sns.despine(offset=10, trim=True)\n",
     "plt.tight_layout()\n",
-    "fig.savefig('model_predictions.pdf')"
+    "#fig.savefig('model_predictions.pdf')"
    ]
   }
  ],
