Update Belief State Model.ipynb

--- a/Belief State Model.ipynb
+++ b/Belief State Model.ipynb
@@ -211,7 +211,7 @@
     "c = 0 # criterion set to 0, assuming no bias\n",
     "model_confidence_belief = dv2conf(np.abs(model_dvs-c),sigma); # belief state model (model1)\n",
     "model_confidence = dv2conf(np.abs(model_evs-c),sigma); # stimulus state model (model2)\n",
-    "# see cell 37 'Averaging' for n trials for each conditions"
+    "# see cell 'Averaging' for n trials for each conditions"
    ]
   },
   {
@@ -230,8 +230,8 @@
    "outputs": [],
    "source": [
     "model_feedback = model_correct; # feedback = 0 or 1\n",
-    "model_rpe_belief = model_feedback - model_confidence_belief; # belief state model, see Eq. 5 and cell 37 'Averaging'\n",
-    "model_rpe = model_feedback - model_confidence; # stimulus state model, see Eq. 5 and cell 37 'Averaging'"
+    "model_rpe_belief = model_feedback - model_confidence_belief; # belief state model, see Eq. 5 and cell 'Averaging'\n",
+    "model_rpe = model_feedback - model_confidence; # stimulus state model, see Eq. 5 and cell 'Averaging'"
    ]
   },
   {
