--- a/Estimate Sigma.ipynb
+++ b/Estimate Sigma.ipynb
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "sdata = pd.read_csv('pupil_subjects.csv')\n",
+    "sdata = pd.read_csv('https://doi.org/10.6084/m9.figshare.6945824.v1')\n",
     "d = pd.DataFrame()\n",
     "d['response'] = sdata['response'] # 1 up, 0 down\n",
     "d['coh_dir'] = sdata['coherence'] / np.sign(sdata['stimulus'] - 0.5) # adds direction 1,-1"
