--- a/analysis/README
+++ b/analysis/README
@@ -1,3 +1,7 @@
 ## Operators
 For updated pupil Operators see: https://github.com/colizoli/hedfpy
 Forked from tknapen/hedfpy
+
+For the 'myfuncs' script see: https://github.com/colizoli/2017_eLife/blob/master/myfuncs.py
+Forked from jwdegee/2017_eLife
+    
