--- a/analysis/README
+++ b/analysis/README
@@ -4,4 +4,6 @@ Forked from tknapen/hedfpy
 
 For the 'myfuncs' script see: https://github.com/colizoli/2017_eLife/blob/master/myfuncs.py
 Forked from jwdegee/2017_eLife
-    
+
+For the motion energy scripts see: https://github.com/colizoli/motionEnergy
+Forked from anne-urai/motionEnergy
